--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,10 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    "../node_modules"
+  ],
+  "compileOnSave":false
+
 }
